added auth config